[gd_scene load_steps=2 format=3 uid="uid://d3ixkjyjao54n"]

[ext_resource type="Script" uid="uid://ci2b3tdx5ooh7" path="res://scripts/ui.gd" id="1_jxero"]

[node name="UI" type="Control" node_paths=PackedStringArray("dir_input")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jxero")
dir_input = NodePath("input/input")

[node name="input" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="input"]
modulate = Color(1, 1, 1, 0.22352941)
z_index = 10
layout_mode = 0
offset_left = 953.0
offset_top = -5.0
offset_right = 1230.0
offset_bottom = 655.0
color = Color(0.45490196, 0.45490196, 0.45490196, 1)

[node name="input" type="TextEdit" parent="input"]
layout_mode = 0
offset_left = 1033.0
offset_top = 52.0
offset_right = 1215.0
offset_bottom = 134.0
text = "x ** 2"
placeholder_text = "mx + c
"
selecting_enabled = false

[node name="Label" type="Label" parent="input"]
layout_mode = 0
offset_left = 1003.0
offset_top = 58.0
offset_right = 1043.0
offset_bottom = 81.0
text = "f(x)"

[connection signal="mouse_entered" from="input/input" to="." method="_on_input_mouse_entered"]
[connection signal="mouse_exited" from="input/input" to="." method="_on_input_mouse_exited"]
[connection signal="text_changed" from="input/input" to="." method="_on_text_edit_text_changed"]
